# pproj

./: 1_CountingSort.cpp  3_Calculator.cpp  4_CircularBuffer.cpp  old_programwhatever.cpp
QE/: 1.go  2.go  qe.sql
QE/Logs/: 4_types.sh  qna.txt
go/: counting.go  iceFigures.go  keyboardOrderness.go  main.go  trades.go
go/QE/: 3.go
go/QE/Logs/: 1_session.sh  2_sessionBalance.sh  3_withdrawals.sh  logs.txt  print.awk
rw/: main.cpp
serv/: CMakeLists.txt
serv/client/: client.cpp  client.h  main.cpp
serv/server/: main.cpp  server.cpp  server.h
serv2/: CMakeLists.txt  puf.cpp  puf.h
serv2/client/: client.cpp  client.h  main.cpp
serv2/server/: main.cpp  server.cpp  server.h
sfmlshapes/: CMakeLists.txt  sfmlshapes.cpp
text_preview/: main.cpp  settings_dlg.cpp  settings_dlg.h  settings_dlg.ui  text_preview.cpp  text_preview.h  text_preview.pro  text_preview.ui
